Fix repository methods